// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarFieldUom Component should export select options: toolbarFieldOptions 1`] = `
[
  {
    "selected": false,
    "title": "t(curiosity-toolbar.uom, {"context":"cores"})",
    "value": "cores",
  },
  {
    "selected": false,
    "title": "t(curiosity-toolbar.uom, {"context":"sockets"})",
    "value": "sockets",
  },
]
`;

exports[`ToolbarFieldUom Component should handle updating uom through redux state with component: dispatch uom, component 1`] = `
[
  [
    [
      {
        "type": "SET_QUERY_RESET_INVENTORY_LIST",
        "viewId": undefined,
      },
      {
        "type": "SET_QUERY_RHSM_uom",
        "uom": "cores",
        "viewId": undefined,
      },
    ],
  ],
]
`;

exports[`ToolbarFieldUom Component should handle updating uom through redux state with hook: dispatch uom, hook 1`] = `
[
  [
    [
      {
        "type": "SET_QUERY_RESET_INVENTORY_LIST",
        "viewId": "loremIpsum",
      },
      {
        "type": "SET_QUERY_RHSM_uom",
        "uom": "dolor sit",
        "viewId": "loremIpsum",
      },
    ],
  ],
]
`;

exports[`ToolbarFieldUom Component should render a basic component: basic 1`] = `
<Select
  aria-label="t(curiosity-toolbar.placeholder, {"context":"uom"})"
  ariaLabel="Select option"
  className=""
  data-test="toolbarFieldUom"
  direction="down"
  id="generatedid-"
  isDisabled={false}
  isToggleText={true}
  maxHeight={null}
  name={null}
  onSelect={[Function]}
  options={
    [
      {
        "selected": false,
        "title": "t(curiosity-toolbar.uom, {"context":"cores"})",
        "value": "cores",
      },
      {
        "selected": true,
        "title": "t(curiosity-toolbar.uom, {"context":"sockets"})",
        "value": "sockets",
      },
    ]
  }
  placeholder="t(curiosity-toolbar.placeholder, {"context":"uom"})"
  position="left"
  selectedOptions="sockets"
  toggleIcon={null}
  variant="single"
/>
`;
